fix input zoom on iOS iPhone 8

--- a/src/components/SearchParams/SearchParams.scss
+++ b/src/components/SearchParams/SearchParams.scss
@@ -18,14 +18,15 @@
 }
 
 .search-params form label input {
+  border: none;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  font-size: 1em;
   outline: none;
-  border: none;
-  width: 100%;
   padding: 10px 15px 10px 40px;
   transition: all 0.2s ease 0s;
+  width: 100%;
 
   &:focus {
     border: 2px solid rgb(63, 127, 191);
